--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^2.15.2",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -16,6 +18,7 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
