--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,13 @@
     "singleQuote": true,
     "trailingComma": "all",
     "bracketSpacing": true,
-    "parser": "typescript"
+    "parser": "typescript",
+    "overrides": [
+        {
+          "files": "*.css",
+          "options": {
+            "parser": "css"
+          }
+        }
+      ]
 }
