--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretify": "npx prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "daisyui": "^2.15.2",
     "next": "latest",
+    "postcss-scss": "^4.0.4",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
@@ -17,6 +20,7 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
