--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build & next export",
     "start": "next start",
     "lint": "next lint",
-    "pretify": "npx prettier --write .",
+    "format": "npx prettier --write .",
+    "format:check": "npx prettier --check .",
     "prepare": "husky install"
   },
   "dependencies": {
