--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -3,6 +3,8 @@ name: Check Code completeness
 on:
   pull_request:
     branches: [ "master" ]
+  workflow_dispatch:
+    branches: ['master']  
 
 jobs:
   check_lint:
