--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -3,7 +3,7 @@ name: Check Code completeness
 on:
   pull_request:
     branches: [ "master" ]
-  workflow_dispatch:
+  workflow_call:
     branches: ['master']  
 
 jobs:
