fix workflow file.

--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -4,7 +4,10 @@ on:
   pull_request:
     branches: [ "master" ]
   workflow_call:
-    branches: ['master']  
+    outputs:
+      check_lint_output:
+        description: Output for lint and format checking
+        value: ${{ jobs.check_lint.outputs }}  
 
 jobs:
   check_lint:
