--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -8,6 +8,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: [check-lint]
+    if: ${{ github.ref == 'refs/heads/master' }}
     
     steps:
       - name: Deploying to Production
