--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -9,8 +9,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [check-lint]
-    
+    if: ${{ github.ref == 'refs/heads/master' }}
     
     steps:
-      - name: ${{github.ref}}
+      - name: Deploying to Production
         run: echo deploying  
