s3 sync add to the deploy-prod.yml file.

--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Check code format
         run: npm run format:check  
 
-      # Check code format
+      # Check code lint
       - name: check code lint
         run: npm run lint
