--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build & next export",
+    "build": "next build",
+    "build:export": "next build & next export",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "format": "npx prettier --write .",
