--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -19,7 +19,9 @@ jobs:
         run: npm install
 
       - name: build frontend code
-        run: npm run build    
+        run: |
+          npm run build    
+          npm run export    
 
       - name: Configure AWS credentials from Test account
         uses: aws-actions/configure-aws-credentials@v1
