--- a/.github/workflows/check-lint-dev.yml
+++ b/.github/workflows/check-lint-dev.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: setup node
-        uses: actions/setup-node@dev
+        uses: actions/setup-node@master
         with:
             node-version: ${{matrix.node_version}}
 
