--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -8,6 +8,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    env:
+        NEXT_PUBLIC_CLIENT_URL: ${{secrets.DEV_CLIENT_URL}}
     needs: [check-lint]
     if: ${{ github.ref == 'refs/heads/dev' }}
     
