--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -36,4 +36,4 @@ jobs:
         run: |
           aws s3 rm --recursive s3://${{secrets.DEVELOPMENT_BUCKET}}
           aws s3 sync ./out/ s3://${{secrets.DEVELOPMENT_BUCKET}}
-          aws cloudfront create-invalidation --distribution-id {{secrets.DEV_CLOUDFRONT_DISTRIBUTION}} --paths "/*"  
+          aws cloudfront create-invalidation --distribution-id ${{secrets.DEV_CLOUDFRONT_DISTRIBUTION}} --paths "/*"  
