--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "husky": "^8.0.1",
+    "miragejs": "^0.1.45",
     "postcss": "^8.4.14",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
