--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "@components/*" : ["./src/common/components/*"],
       "@styles/*" : ["./src/common/styles/*"],
       "@store/*" : ["./src/redux/*"],
+      "@customtypes/*" : ["./src/types/*"],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
