--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_CLIENT_URL: ${{secrets.DEV_CLIENT_URL}}
+      NEXT_PUBLIC_CLIENT_URL: ${{secrets.DEMO_CLIENT_URL}}
       NEXT_PUBLIC_DEMO_ENV : true
     needs: [check-lint]
     if: ${{ github.ref == 'refs/heads/demo' }}
