--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
