--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-scss": "^4.0.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-image-gallery": "^1.2.10",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.4",
     "redux": "^4.2.0",
