--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.1.0",
     "react-image-gallery": "^1.2.10",
     "react-redux": "^8.0.2",
+    "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.0.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
