--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "daisyui": "^2.15.2",
@@ -21,17 +26,13 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-image-gallery": "^1.2.10",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^8.0.2",
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.0.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0"
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
